--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "tailwindcss": "^3.4.13"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.9"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
