--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
+    "dev": "tailwindcss -i ./src/assets/css/input.css -o ./src/assets/css/output.css --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.13"
